[package]
name = "flust-plugins"
version = "0.4.0"
authors = ["Flust Contributors"]
edition = "2021"
description = "Flust plugins"
keywords = ["flutter", "GUI"]
repository = "https://github.com/vially/flust"
license = "MIT"

[dependencies]
flust-engine = { path = "../flust-engine" }
icu_locid = "1.4.0"
tracing = "0.1"
parking_lot = "0.12.1"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
strum = { version = "0.26.2", features = ["derive"] }
