[package]
name = "flust-sctk"
version = "0.1.0"
edition = "2021"

[dependencies]
ashpd = "0.8.1"
calloop = { version = "0.13.0", features = ["executor"] }
dpi = "0.1.0"
flutter-engine = { path = "../flutter-engine" }
flutter-engine-api = { path = "../flutter-engine-api" }
flutter-engine-sys = { path = "../flutter-engine-sys" }
flutter-glutin = { path = "../flutter-glutin" }
flutter-plugins = { path = "../flutter-plugins" }
flutter-runner-api = { path = "../flutter-runner-api" }
futures-lite = "2.3.0"
glutin = "0.32.0"
tracing = "0.1"
parking_lot = "0.12.1"
raw-window-handle = "0.6.2"
smithay-client-toolkit = "0.19.1"
smithay-clipboard = "0.7.1"
thiserror = "1.0.50"
wayland-backend = { version = "0.3.4", features = ["client_system"] }
wayland-client = "0.31.3"
