[package]
name = "flust-tools"
version = "0.1.0"
authors = ["Flust Contributors"]
edition = "2018"

[dependencies]
which = "6.0.2"
dirs = "5.0"
curl = "0.4.46"
indicatif = "0.17.8"
clap = { version = "4.5.16", features = ["derive"] }
strum = { version = "0.26.3", features = ["derive"] }
tracing = "0.1"
tabled = "0.16.0"
reqwest = { version = "0.12.8", features = ["blocking"] }
supports-hyperlinks = "3.0.0"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
tempfile = "3.13.0"
xz2 = "0.1.7"
tar = "0.4"
