[package]
name = "flust-winit"
version = "0.4.0"
authors = ["Flust Contributors"]
edition = "2021"
description = "Flutter engine embedder using winit."
keywords = ["flutter", "GUI"]
repository = "https://github.com/vially/flust"
license = "MIT"

[dependencies]
copypasta = "0.10.0"
dpi = "0.1.0"
flutter-engine-api = { path = "../flutter-engine-api" }
flutter-engine-sys = { path = "../flutter-engine-sys" }
flutter-engine = { path = "../flutter-engine" }
flutter-glutin = { path = "../flutter-glutin" }
flutter-plugins = { path = "../flutter-plugins" }
flust-runner-api = { path = "../flust-runner-api" }
gl = "0.14.0"
glutin = "0.32.0"
glutin-winit = "0.5.0"
tracing = "0.1"
parking_lot = "0.12.1"
raw-window-handle = "0.6.2"
sys-locale = "0.3.1"
winit = { version = "0.30.0", features = ["rwh_06"] }
thiserror = "1.0.52"
futures-lite = "2.3.0"
async-executor = "1.12.0"
ashpd = "0.8.1"
