[package]
name = "flust"
version = "0.1.0"
edition = "2021"

[features]
default = ["flust-sctk"]

[dependencies]
dpi = "0.1.0"
flutter-engine-sys = { path = "../flutter-engine-sys" }
flutter-engine = { path = "../flutter-engine" }
flutter-plugins = { path = "../flutter-plugins" }
flutter-runner-api = { path = "../flutter-runner-api" }
flust-sctk = { path = "../flust-sctk", optional = true }
flust-winit = { path = "../flust-winit", optional = true }
thiserror = "1.0.50"
tracing = "0.1"

[target.'cfg(target_os = "linux")'.dependencies]
dirs = "5.0"
