[package]
name = "flust"
version = "0.1.0"
edition = "2021"
authors = ["Flust Contributors"]
description = "Flutter embedder for Linux"
repository = "https://github.com/vially/flust"
license = "MIT"

[features]
default = ["flust-sctk"]

[dependencies]
dpi = "0.1.0"
flust-engine-sys = { path = "../flust-engine-sys" }
flust-engine = { path = "../flust-engine" }
flust-plugins = { path = "../flust-plugins" }
flust-runner-api = { path = "../flust-runner-api" }
flust-sctk = { path = "../flust-sctk", optional = true }
flust-winit = { path = "../flust-winit", optional = true }
thiserror = "1.0.50"
tracing = "0.1"

[target.'cfg(target_os = "linux")'.dependencies]
dirs = "5.0"
