[package]
name = "flutter-engine"
version = "0.4.0"
authors = ["juju <gliheng@gmail.com>", "Sophie Tauchert <sophie@999eagle.moe>"]
edition = "2021"
description = "Flutter engine embedder in rust."
keywords = ["flutter", "GUI"]
repository = "https://github.com/flutter-rs/flutter-rs"
license = "MIT"

[dependencies]
crossbeam-channel = "0.5.8"
dpi = "0.1.0"
flutter-engine-api = { path = "../flutter-engine-api" }
flutter-engine-sys = { path = "../flutter-engine-sys" }
tracing = "0.1"
parking_lot = "0.12.1"
priority-queue = "2.0.3"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
thiserror = "1.0.50"
