[package]
name = "flutter-glfw"
version = "0.4.0"
authors = ["Flust Contributors"]
edition = "2018"
description = "Flutter engine embedder using glfw."
keywords = ["flutter", "GUI"]
repository = "https://github.com/vially/flust"
license = "MIT"

[dependencies]
flust-engine-sys = { path = "../flust-engine-sys" }
flust-engine = { path = "../flust-engine" }
flust-plugins = { path = "../flust-plugins" }
locale_config = "0.3.0"
log = "0.4.8"
parking_lot = "0.10.0"
glfw = "0.37.0"
