[package]
name = "flutter-plugins"
version = "0.4.0"
authors = ["juju <gliheng@gmail.com>"]
edition = "2021"
description = "flutter-rs plugins"
keywords = ["flutter", "GUI"]
repository = "https://github.com/flutter-rs/flutter-rs"
license = "MIT"

[dependencies]
flutter-engine = { path = "../flutter-engine" }
icu_locid = "1.4.0"
log = "0.4.20"
parking_lot = "0.12.1"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
tinyfiledialogs = "3.3.9"
