[package]
name = "flutter-sctk"
version = "0.1.0"
edition = "2021"

[dependencies]
dpi = "0.1.0"
flutter-engine = { path = "../flutter-engine" }
flutter-engine-api = { path = "../flutter-engine-api" }
flutter-engine-sys = { path = "../flutter-engine-sys" }
flutter-glutin = { path = "../flutter-glutin" }
flutter-plugins = { path = "../flutter-plugins" }
flutter-runner-api = { path = "../flutter-runner-api" }
glutin = "0.31.3"
log = "0.4.20"
parking_lot = "0.12.1"
raw-window-handle = "0.5.2"
smithay-client-toolkit = { git = "https://github.com/vially/client-toolkit.git", branch = "develop" }
thiserror = "1.0.50"
wayland-backend = { version = "0.3.2", features = ["client_system"] }
wayland-client = "0.31.1"
