[package]
name = "flutter-winit"
version = "0.4.0"
authors = ["David Craven <david@craven.ch>"]
edition = "2021"
description = "Flutter engine embedder using winit."
keywords = ["flutter", "GUI"]
repository = "https://github.com/flutter-rs/flutter-rs"
license = "MIT"

[dependencies]
copypasta = "0.10.0"
flutter-engine-sys = { path = "../flutter-engine-sys" }
flutter-engine = { path = "../flutter-engine" }
flutter-plugins = { path = "../flutter-plugins" }
gl = "0.14.0"
glutin = "0.29.1"
log = "0.4.20"
parking_lot = "0.12.1"
sys-locale = "0.3.1"
