[package]
name = "flutter-winit"
version = "0.4.0"
authors = ["David Craven <david@craven.ch>"]
edition = "2021"
description = "Flutter engine embedder using winit."
keywords = ["flutter", "GUI"]
repository = "https://github.com/flutter-rs/flutter-rs"
license = "MIT"

[dependencies]
copypasta = "0.10.0"
dpi = { path = "../../dpi" }
flutter-engine-api = { path = "../flutter-engine-api" }
flutter-engine-sys = { path = "../flutter-engine-sys" }
flutter-engine = { path = "../flutter-engine" }
flutter-glutin = { path = "../flutter-glutin" }
flutter-plugins = { path = "../flutter-plugins" }
flutter-runner-api = { path = "../flutter-runner-api" }
gl = "0.14.0"
glutin = "0.31.3"
glutin-winit = "0.4.2"
log = "0.4.20"
parking_lot = "0.12.1"
raw-window-handle = "0.5.2"
sys-locale = "0.3.1"
winit = { version = "0.29.4", features = ["rwh_05"] }
thiserror = "1.0.52"
futures-lite = "2.1.0"
async-executor = "1.8.0"
ashpd = "0.6.7"
